[package]
name = "nms-rs"
version = "0.1.0"
edition = "2021"
authors = ["Mroik <mroik@delayed.space>"]
readme = "README.md"
repository = "https://github.com/Mroik/nms-rs"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
